# latch-data-challenge-sfrpt

./: .dockerignore  .env.example  .gitignore  .sqlfluff  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
data-challenge_sfrpt/: README.md  crimes.sql  loader.py  queries.sql  view.sql
scripts/: postgres_init.sh
