[tool.poetry]
name = "data-challenge-sfrpt"
version = "1.0.0"
description = "Data challenge for the Data Engineer role at LATCH"
license = "Proprietary"
authors = ["Hernán Vignolo <vignolo.hernan@gmail.com>"]
maintainers = ["Hernán Vignolo <vignolo.hernan@gmail.com>"]
readme = "README.md"
keywords = ["Data", "Engineering", "LATCH"]


[tool.poetry.dependencies]
python = "~3.10"
pandas = "^2.1.3"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
interrogate = "^1.5.0"
mypy = "^1.6.0"
ruff = "^0.0.292"
sqlalchemy-stubs = "^0.4"
sqlfluff = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
extend-exclude = ["__pycache__"]
extend-select = ["B", "D", "I", "N", "PL", "Q"]
fix = true
fixable = ["ALL"]
ignore = ["D100", "D104", "D2", "D4"]
line-length = 88
output-format = "grouped"
show-fixes = true
show-source = true
target-version = "py310"
unfixable = []

[tool.ruff.pycodestyle]
ignore-overlong-task-comments = true
max-doc-length = 88

[tool.ruff.flake8-import-conventions]
[tool.ruff.flake8-import-conventions.aliases]
"matplotlib.pyplot" = "plt"
numpy = "np"
pandas = "pd"
scipy = "sp"
seaborn = "sns"

[tool.ruff.isort]
combine-as-imports = true
force-sort-within-sections = true
force-wrap-aliases = true
relative-imports-order = "closest-to-furthest"
split-on-trailing-comma = false


[tool.black]
line-length = 88
skip-string-normalization = true


[tool.interrogate]
color = true
fail-under = 40
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-module = false
ignore-private = false
ignore-property-decorators = false
ignore-semiprivate = false
quiet = false
verbose = 0
whitelist-regex = []
